--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "photo-gallery",
+  "name": "Photo-Gallery",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "mahesh.vrce@gmail.com",
+  "homepage": "https://maheshvnit.wordpress.com/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,6 +26,7 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
     "cordova-android": "^8.0.0",
+    "cordova-browser": "6.0.0",
     "cordova-plugin-camera": "^4.0.3",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
@@ -78,7 +79,8 @@
       "cordova-plugin-camera": {}
     },
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   }
 }
